# TeamSpeak3WebsitePreview

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CMakePresets.json  HISTORY.md  LICENSE.md  Local.testsettings  README.md  TeamSpeak 3 Website Preview.sln  TeamSpeak 3 Website Preview.vsmdi  TraceAndTestImpact.testsettings  build_plugin.bat
.claude/: settings.json
.claude/plans/: did-you-add-the-mutable-balloon.md  i-want-to-update-humming-wilkes.md  let-s-make-it-happy-hummingbird.md  now-i-want-to-ethereal-flurry.md  sleepy-skipping-ocean.md  this-will-be-v3-0-immutable-swing.md  v2-settings-dialog.md
.claude/rules/: bbcode
.github/workflows/: deploy.yml
cmake/: plugin_version.h.in
deploy/: package.ini
libiconv/: libiconv.vcxproj  libiconv.vcxproj.filters
src/: config.cpp  config.h  core.c  core.h  plugin.c  plugin.cpp  settings.c  settings.h  settings.rc  webparse.cpp  webparse.h
test/: main_test.c  test_callback.c  test_inline.c  test_message.c  test_url.c  test_webparse.cpp
ts3websitepreview/: core.c  core.h  package.ini  plugin.c  plugin.h  plugin_version.h  resource.h  settings.c  settings.h  settings.rc  ts3websitepreview.vcxproj  ts3websitepreview.vcxproj.filters
ts3websitepreview_win32.ts3_plugin/: package.ini
ts3websitepreview_win64.ts3_plugin/: package.ini
ts3websitepreviewtest/: main.c  main_test.c  test_callback.c  test_inline.c  test_message.c  test_parse.c  test_url.c  ts3websitepreviewtest.vcxproj  ts3websitepreviewtest.vcxproj.filters
